[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/backgrounds/backgroundColorForest.png" type="Texture" id=1]
[ext_resource path="res://assets/themes/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/scenes/QuestionScreen.gd" type="Script" id=3]
[ext_resource path="res://assets/scenes/PlayButton.gd" type="Script" id=5]

[node name="QuestionScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="BackgroundTexture" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true
stretch_mode = 7

[node name="QuestionLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -243.0
margin_right = 512.0
margin_bottom = -212.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
align = 1

[node name="Answers" type="ItemList" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -150.0
margin_top = -66.0
margin_right = 150.0
margin_bottom = 135.0
select_mode = 1
allow_reselect = true
allow_rmb_select = true

[node name="CheckButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -70.5
margin_top = -108.0
margin_right = 70.5
margin_bottom = -71.0
text = "Проверить"

[node name="CheckResult" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.890196 )

[node name="ResultLabel" type="Label" parent="CheckResult"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -96.0
margin_top = 164.0
margin_right = 96.0
margin_bottom = 195.0
text = "Тут будет ответ"
align = 1

[node name="NextButton" type="Button" parent="CheckResult"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -122.5
margin_top = -177.0
margin_right = 122.5
margin_bottom = -140.0
text = "Следующий вопрос"

[node name="SummaryButton" type="Button" parent="CheckResult"]
margin_left = 424.0
margin_top = 486.0
margin_right = 602.0
margin_bottom = 531.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Итоги"
script = ExtResource( 5 )
next_scene = "res://assets/scenes/EndScreen.tscn"

[connection signal="multi_selected" from="Answers" to="." method="_on_Answers_multi_selected"]
[connection signal="button_up" from="CheckButton" to="." method="_on_CheckButton_button_up"]
[connection signal="button_up" from="CheckResult/NextButton" to="." method="_on_NextButton_button_up"]
[connection signal="button_up" from="CheckResult/SummaryButton" to="CheckResult/SummaryButton" method="_on_button_up"]
